# lindera

./: .age.toml  CHANGES.rst  README.rst  Taskfile.yaml  aqua.yaml  lefthook.yml  pyproject.toml  renovate.json5
.github/: release-body.md
.github/workflows/: ci.yaml  deploy-docs.yaml  release.yaml
benchmark/: __init__.py  queries.py  run.py  search_client.py
benchmark/corpus/: arts.rst  conf.py  economy.rst  food.rst  history.rst  index.rst  medicine.rst  nature.rst  science.rst  sports.rst  technology.rst  travel.rst
docs/: conf.py  guide.rst  index.rst
docs/_locales/en/LC_MESSAGES/: changes.po  guide.po  index.po  sphinx.po
docs/_locales/en/LC_MESSAGES/usage/: index.po  splitter.po
docs/_locales/ja/LC_MESSAGES/: changes.po  guide.po  index.po  sphinx.po
docs/_locales/ja/LC_MESSAGES/usage/: index.po  splitter.po
docs/usage/: index.rst  splitter.rst
src/atsphinx/lindera/: __init__.py  splitter.py
src/atsphinx/lindera_search/: .gitignore  __init__.py  splitter.py
tests/: test_splitter.py
tests/test-root/: conf.py  index.rst
