[project]
name = "atsphinx-lindera-search"
version = "0.0.0"
description = "Lindera bindings for Sphinx"
authors = [{name = "Kazuya Takei", email = "myself@attakei.net"}]
license = "Apache-2.0"
requires-python = ">= 3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: Sphinx",
    "Framework :: Sphinx :: Extension",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Documentation",
    "Topic :: Documentation :: Sphinx",
    "Topic :: Software Development",
    "Topic :: Software Development :: Documentation",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing",
    "Topic :: Text Processing :: Markup",
    "Topic :: Text Processing :: Markup :: reStructuredText",
]
readme = "README.rst"
dependencies = [
    "sphinx",
]

[project.urls]
Home = "https://github.com/atsphinx/lindera-search"
Documentation = "https://atsphinx.github.io/lindera-search"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "esbonio",
    {include-group = "docs"},
    {include-group = "lint"},
    {include-group = "test"},
]
docs = [
    "atsphinx-bulma>=0.4.2",
    "atsphinx-mini18n",
    "sphinx-autobuild",
    "sphinx-intl",
    "sphinx-toolbox",
]
lint = [
    "doc8",
    "ruff",
    "ty",
    "types-docutils>=0.21.0.20241128",
]
test = [
    "pytest",
]

[tool.doc8]
max-line-length = 119

[tool.uv]
managed = true

[tool.ruff.lint]
select = ["C90", "D", "E", "F", "I", "W"]

[tool.ruff.lint.pydocstyle]
convention = "pep257"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/atsphinx"]
only-includes = ["src/atsphinx"]
